--- a/LodhranUniversity/Web.config
+++ b/LodhranUniversity/Web.config
@@ -63,6 +63,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="UniversityModelContainer" connectionString="metadata=res://*/Data.UniversityModel.csdl|res://*/Data.UniversityModel.ssdl|res://*/Data.UniversityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=QADIR\SQLEXPRESS;initial catalog=LodhranUniversity;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="UniversityModelContainer" connectionString="metadata=res://*/Data.UniversityModel.csdl|res://*/Data.UniversityModel.ssdl|res://*/Data.UniversityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=lodhranuniversity.database.windows.net;Initial Catalog=Lodhranuniversity;User ID=lodhranuniversity;Password=Talha001001@;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
